cabal-version:      3.4
name:               possession
version:            0.1.0.0
license:            AGPL-3.0-or-later
copyright:          2020 Patrick Thomson
maintainer:         patrick.william.thomson@gmail.com
author:             Patrick Thomson
bug-reports:        github.com/patrickt/possession
synopsis:           An offbeat roguelike
description:
    A console-based roguelike inspired by ToME 2's "Lost Soul" mode.

category:           Game
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Possession
        Control.Effect.Broker
        Data.Aeson.Exts
        Data.Amount
        Data.Color
        Data.Experience
        Data.Glyph
        Data.Message
        Data.Name
        Data.Position
        Data.Store.Exts
        Data.Hitpoints
        Dhall.Exts
        Game.Action
        Game.Canvas
        Game.Behavior
        Game.Ecs
        Game.Entity.Enemy
        Game.Entity.Player
        Game.Info
        Game.Save
        Game.State
        Game.Sprite
        Game.World
        Optics.Tupled
        System.Random.MWC.Exts
        UI.Attributes
        UI.App
        UI.Input
        UI.InGame
        UI.Hud
        UI.MainMenu
        UI.Resource
        UI.Render
        UI.Responder
        UI.Responder.Chain
        UI.Sidebar
        UI.State
        UI.Widgets.Modeline

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aeson,
        apecs,
        array,
        async,
        brick,
        containers,
        comonad,
        dhall,
        either,
        fused-effects,
        fused-effects-mwc-random,
        fused-effects-optics,
        generic-lens-core,
        generic-optics,
        generic-monoid,
        grid,
        linear,
        mwc-random,
        optics,
        optics-th,
        optics-vl,
        text,
        text-show,
        store,
        vector,
        vty,
        base ^>=4.14.1.0

executable possession
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base ^>=4.14.1.0,
        possession

test-suite possession-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base ^>=4.14.1.0,
        possession
