cabal-version:      3.4
name:               possession
version:            0.1.0.0
license:            AGPL-3.0-only
copyright:          2020 Patrick Thomson
maintainer:         patrick.william.thomson@gmail.com
author:             Patrick Thomson
bug-reports:        github.com/patrickt/possession
synopsis:           An offbeat roguelike
description:
  A console-based roguelike inspired by ToME 2's "Lost Soul" mode.

category:           Game
extra-source-files: CHANGELOG.md

common shared
  build-depends:    base
                  , vector
  default-language: Haskell2010
  default-extensions:
      DeriveAnyClass
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      GADTSyntax
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      OverloadedLabels
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      PatternSynonyms
      TypeApplications
      TypeSynonymInstances
  ghc-options:      -Wall

library
  import:          shared
  exposed-modules:
    Apecs.Exts
    Control.Effect.Broker
    Data.Aeson.Exts
    Data.Amount
    Data.Color
    Data.Experience
    Data.Glyph
    Data.Hitpoints
    Data.List.Pointed
    Data.Message
    Data.Name
    Data.Position
    Data.Store.Exts
    Data.Vector.Universe
    Data.Vector.Zipper
    Dhall.Exts
    Game.Action
    Game.Behavior
    Game.Canvas
    Game.Dungeon
    Game.Ecs
    Game.Entity.Enemy
    Game.Entity.Player
    Game.Flag
    Game.Info
    Game.Save
    Game.Sprite
    Game.State
    Game.World
    Possession
    System.Random.MWC.Exts
    UI.App
    UI.Attributes
    UI.Canvas
    UI.GameOver
    UI.Hud
    UI.Input
    UI.MainMenu
    UI.Render
    UI.Resource
    UI.Responder
    UI.Responder.Chain
    UI.State
    UI.Widgets.Sidebar
    UI.Widgets.Toplevel
    UI.Widgets.Modeline

  hs-source-dirs:  src
  build-depends:
    , aeson
    , apecs
    , array
    , async
    , base
    , brick
    , bytestring
    , comonad
    , containers
    , deepseq
    , dhall
    , directory
    , either
    , filepath
    , fused-effects
    , fused-effects-mwc-random
    , fused-effects-optics
    , generic-lens-core
    , generic-monoid
    , generic-optics
    , grid
    , indexed-traversable
    , indexed-traversable-instances
    , linear
    , mwc-random
    , motor
    , random
    , optics
    , optics-th
    , optics-vl
    , parallel
    , pointedlist
    , store
    , stm
    , text
    , text-show
    , transformers
    , vector
    , vty

executable automata-viewer
  import:         shared
  hs-source-dirs: app
  main-is:        Viewer.hs
  build-depends:
    , comonad
    , possession
    , random
    , vector

executable possession
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  possession
  ghc-options:    -threaded

benchmark possession-benchmark
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  hs-source-dirs: app
  build-depends:
    , deepseq
    , possession
    , gauge
    , comonad

test-suite possession-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  other-modules:  Gen
  hs-source-dirs: test
  ghc-options:    -Wall -threaded
  build-depends:
    , hedgehog
    , possession
