cabal-version:      3.4
name:               possession
version:            0.1.0.0
license:            AGPL-3.0-only
copyright:          2020 Patrick Thomson
maintainer:         patrick.william.thomson@gmail.com
author:             Patrick Thomson
bug-reports:        github.com/patrickt/possession
synopsis:           An offbeat roguelike
description:
  A console-based roguelike inspired by ToME 2's "Lost Soul" mode.
data-files: cfg/**/*.dhall

category:           Game
extra-source-files: CHANGELOG.md

common shared
  build-depends:    base
                  , vector
                  , random

  default-language: GHC2021
  default-extensions:
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      GADTs
      LambdaCase
      MultiWayIf
      OverloadedLabels
      PatternSynonyms
      TypeFamilies
  ghc-options:      -Wall

library
  import:          shared
  exposed-modules:
    Apecs.Exts
    Apecs.THTuples
    Control.Carrier.Trace.Brokered
    Control.Effect.Broker
    Data.Aeson.Exts
    Data.Amount
    Data.Color
    Data.Experience
    Data.Glyph
    Data.Hitpoints
    Data.List.Pointed
    Data.Message
    Data.Name
    Data.Position
    Data.Store.Exts
    Data.Vector.Universe
    Data.Vector.Zipper
    Dhall.Exts
    Game.Action
    Game.Canvas
    Game.Dungeon
    Game.Ecs
    Game.Entity.Terrain
    Game.Entity.Enemy
    Game.Entity.Inventory
    Game.Entity.Player
    Game.Flag
    Game.Info
    Game.Pathfind
    Game.Query
    Game.Save
    Game.Sprite
    Game.State
    Game.World
    Raws
    Raw.Id
    Raw.Lens
    Raw.Types
    Possession
    System.Random.MWC.Exts
    UI.App
    UI.Canvas
    UI.Event
    -- UI.GameOver
    UI.Hud
    UI.Markup
    UI.Render
    UI.Resource
    UI.Responder
    UI.State
    -- UI.SimpleResponder
    UI.Widgets.MainMenu
    UI.Widgets.Sidebar
    UI.Widgets.Toplevel
    UI.Widgets.Modeline

  hs-source-dirs:  src
  build-depends:
      aeson
    , apecs
    , array
    , async
    , base
    , brick
    , bytestring
    , comonad
    , containers
    , data-fix
    , deepseq
    , dhall
    , directory
    , either
    , extra
    , filepath
    , free
    , fused-effects
    , fused-effects-mwc-random
    , fused-effects-optics
    , generic-optics
    , indexed-traversable
    , indexed-traversable-instances
    , linear
    , mwc-random
    , unagi-chan
    , prettyprinter
    , optics
    , optics-th
    , optics-vl
    , parallel
    , pointedlist
    , pqueue
    , prettyprinter
    , profunctors
    , recursion-schemes
    , tactics
    , store
    , network
    , stm
    , template-haskell
    , text
    , text-show
    , transformers
    , vector
    , vty

executable automata-viewer
  import:         shared
  hs-source-dirs: app
  main-is:        Viewer.hs
  build-depends:
    , comonad
    , possession
    , random
    , vector

executable possession
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  possession
  ghc-options:    -threaded

benchmark possession-benchmark
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  hs-source-dirs: app
  build-depends:
    , deepseq
    , possession
    , tasty-bench
    , comonad

test-suite possession-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  other-modules:  Gen
  hs-source-dirs: test
  ghc-options:    -Wall -threaded
  build-depends:
      hedgehog
    , vty
    , optics
    , possession
